finish flask exercise

--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -5,12 +5,10 @@
 </head>
 <body>
     Want to play a game?<br>
-    <form>
+    <form action = "/game_home">
         <input type="radio" name="wants_game" value = True />YES<br>
         <input type="radio" name="wants_game" value = False />NO<br>
         <input type="submit"> 
-        
-
     </form>
 </body>
 </html>
