--- a/templates/game.html
+++ b/templates/game.html
@@ -3,6 +3,12 @@
     <title></title>
 </head>
 <body>
-Game
+    <form action="/madlib">
+        Full Name: <input type="text" name="person"><br>
+        Color: <input type="text" name="color"><br>
+        Noun: <input type="text" name="noun"><br>
+        Adjective: <input type="text" name="adjective"><br>
+        <input type="submit"> 
+    </form>
 </body>
 </html>
