--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -7,9 +7,9 @@
     <div >
          
         <p>
-            There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab.
+            There once was a {{ color }} {{ number }} {{ noun }} sitting in the Hackbright Lab.
             When {{ person }} went to pick it up, it burst into flames in a totally
-            {{ adjective }} way.
+            {{ compliment }} way.
 
         </p>
 
